--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -20,6 +20,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -40,6 +46,7 @@ img {
  * Стили компонента Searchbar
  */
 .Searchbar {
+  width: 100%;
   top: 0;
   left: 0;
   position: sticky;
@@ -126,8 +133,7 @@ img {
   max-width: calc(100vw - 48px);
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-gap: 16px;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 16px;
   padding: 0;
   list-style: none;
   margin-left: auto;
@@ -182,6 +188,7 @@ img {
 */
 .Button {
   padding: 8px 16px;
+  margin-bottom: 20px;
   border-radius: 2px;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
