--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -20,7 +20,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-#root {
+.Container {
   display: flex;
   flex-direction: column;
   align-items: center;
